package yandex.vsubs;
syntax = "proto3";

message VideoSubtitlesRequest {
  string original_url = 1;
  string original_language = 2;
}

message VideoSubtitlesObject {
  string original_subtitles_url = 2;
  string translation_subtitles_url = 5;
  string original_language = 1;
  string translation_language = 4;
}

message VideoSubtitlesResponse {
  repeated VideoSubtitlesObject subtitles = 2;
}
