package yandex.vtrans;
syntax = "proto3";

message VideoTranslationHelpObject {
  string help_type = 1; // video_file_url or subtitles_file_url
  string help_url = 2;
}

message VideoTranslationRequest {
  string original_url = 3;
  string original_language = 8;
  double original_duration = 6;
  string translation_language = 14;
  bool is_first_request = 5;
  bool is_help_objects_included = 9;
  repeated VideoTranslationHelpObject help_objects = 10;
}

enum VideoTranslationResponseStatus {
  ERROR = 0;
  SUCCESS = 1;
  WORK_IN_PROGRESS = 2;
}

message VideoTranslationResponse {
  string translation_url = 1;
  double translation_duration = 2;
  int32 remaining_time = 5;
  VideoTranslationResponseStatus response_status = 4;
  string response_message = 9;
}
